* Add contact mechanism usage

Version 4.6.0 - 2017-10-30
* Initial release