@@ -1,3 +1,4 @@
+* Add fallback users for recipients
 * Add contact mechanism usage
 
 Version 4.6.0 - 2017-10-30
